# serializer version: 1
# name: test_platform_setup_and_discovery[button.v20_reset_duster_cloth-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'button.v20_reset_duster_cloth',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Reset duster cloth',
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'reset_duster_cloth',
    'unique_id': 'tuya.zrrraytdoanz33rldsreset_duster_cloth',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[button.v20_reset_duster_cloth-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'V20 Reset duster cloth',
    }),
    'context': <ANY>,
    'entity_id': 'button.v20_reset_duster_cloth',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_platform_setup_and_discovery[button.v20_reset_edge_brush-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'button.v20_reset_edge_brush',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Reset edge brush',
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'reset_edge_brush',
    'unique_id': 'tuya.zrrraytdoanz33rldsreset_edge_brush',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[button.v20_reset_edge_brush-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'V20 Reset edge brush',
    }),
    'context': <ANY>,
    'entity_id': 'button.v20_reset_edge_brush',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_platform_setup_and_discovery[button.v20_reset_filter-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'button.v20_reset_filter',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Reset filter',
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'reset_filter',
    'unique_id': 'tuya.zrrraytdoanz33rldsreset_filter',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[button.v20_reset_filter-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'V20 Reset filter',
    }),
    'context': <ANY>,
    'entity_id': 'button.v20_reset_filter',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_platform_setup_and_discovery[button.v20_reset_map-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'button.v20_reset_map',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Reset map',
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'reset_map',
    'unique_id': 'tuya.zrrraytdoanz33rldsreset_map',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[button.v20_reset_map-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'V20 Reset map',
    }),
    'context': <ANY>,
    'entity_id': 'button.v20_reset_map',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_platform_setup_and_discovery[button.v20_reset_roll_brush-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'button.v20_reset_roll_brush',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Reset roll brush',
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'reset_roll_brush',
    'unique_id': 'tuya.zrrraytdoanz33rldsreset_roll_brush',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[button.v20_reset_roll_brush-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'V20 Reset roll brush',
    }),
    'context': <ANY>,
    'entity_id': 'button.v20_reset_roll_brush',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
